# nstools

./: LICENSE  README.md  pyproject.toml
examples/: census-collector  census_collector.py  maximizer_example.py  maximizer_weights.yaml
nstools/: __init__.py  census_maximizer.py  census_names.yaml  nation.py  nsapi.py  trotterdam.py  utils.py
nstools/data/: census_distribution.yaml  html_escape_characters.yaml
